longhorn-system/longhorn-system/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-route
  namespace: longhorn-system
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: http-gateway
    namespace: network
    sectionName: http
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: https-gateway
    namespace: network
    sectionName: https
  hostnames:
  - "longhorn.${INFRA_DOMAIN}"
  rules:
  - backendRefs:
    - group: ''
      kind: Service
      name: longhorn-frontend
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
